# term-ai

./: .gitignore  Cargo.toml  LICENSE.md  README.md  ]  delete-sample.sh  error.json  todo
.github/workflows/: release.yml
adrs/: 1-大きなメッセージを分割する責務をどこに持たせるのか.md
responses/: chat-response.json
src/: cli.rs  functions.rs  gpt.rs  lib.rs  main.rs  repl.rs  wrapper.rs
src/functions/: code_capture.rs  code_reviewer.rs  common.rs  repl.rs  speaker.rs  translator.rs
src/gpt/: chat.rs  client.rs
src/wrapper/: any.rs  code_capture.rs  code_reviewer.rs  common.rs  first_command.rs  speaker.rs  translator.rs
