[package]
name = "term-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = {version = "0.11",features = ["json","rustls-tls"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# eventsource-stream = {version = "0.2.3",optional = true}
# futures = { version = "0.3.28" ,optional = true}
# futures-util = { version = "0.3.28",optional = true}
