[package]
name = "term-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rsse = {git = "https://github.com/u-kai/rsse.git",branch = "main"}
# eventsource-stream = {version = "0.2.3",optional = true}
# futures = { version = "0.3.28" ,optional = true}
# futures-util = { version = "0.3.28",optional = true}
